force-app/main/default/objects/Contract/fields/Appel_qualite_demande__c.field-meta.xml
<CustomField>
    <fullName>Appel_qualite_demande__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appel qualité demandé</label>
    <type>Checkbox</type>
</CustomField>