force-app/main/default/objects/Contract/fields/Budget_TTC_annee__c.field-meta.xml
<CustomField>
    <fullName>Budget_TTC_annee__c</fullName>
    <label>Budget TTC sur l&apos;année</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>