force-app/main/default/objects/Contract/fields/Canal_vente__c.field-meta.xml
<CustomField>
    <fullName>Canal_vente__c</fullName>
    <label>Canal de vente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Canal_vente</valueSetName>
    </valueSet>
</CustomField>