force-app/main/default/objects/Contract/fields/CAR__c.field-meta.xml
<CustomField>
    <fullName>CAR__c</fullName>
    <label>CAR</label>
    <summarizedField>Prix_contrat_PDE__c.CAR__c</summarizedField>
    <summaryForeignKey>Prix_contrat_PDE__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>