force-app/main/default/objects/Contract/fields/Charge_affaire__c.field-meta.xml
<CustomField>
    <fullName>Charge_affaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chargé d&apos;affaire</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contrats1</relationshipName>
    <type>Lookup</type>
</CustomField>