force-app/main/default/objects/Contract/fields/Commission_ADE__c.field-meta.xml
<CustomField>
    <fullName>Commission_ADE__c</fullName>
    <label>Commission ADE €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>