force-app/main/default/objects/Contract/fields/Commission_charge_RDV__c.field-meta.xml
<CustomField>
    <fullName>Commission_charge_RDV__c</fullName>
    <label>Commission du chargé de RDV €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>