force-app/main/default/objects/Contract/fields/Commission_commercial__c.field-meta.xml
<CustomField>
    <fullName>Commission_commercial__c</fullName>
    <inlineHelpText>Le calcul de la commission du commercial se fait lors de la création du contrat.
Il s&apos;agit de la commission de ADE moins la commission de la source.

Attention, il ne s&apos;agit pas du montant que va percevoir le commercial/partenaire.</inlineHelpText>
    <label>Commission du commercial €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>