force-app/main/default/objects/Contract/fields/Commission_commerciale_Energy_Plus__c.field-meta.xml
<CustomField>
    <fullName>Commission_commerciale_Energy_Plus__c</fullName>
    <formula>Commission_commercial__c * 0.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission commerciale Energy +</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>