force-app/main/default/objects/Contract/fields/Commission_globale__c.field-meta.xml
<CustomField>
    <fullName>Commission_globale__c</fullName>
    <inlineHelpText>Commission globale générée par le contrat (Part ADE + Part Fournisseur)</inlineHelpText>
    <label>Commission globale €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>