force-app/main/default/objects/Contract/fields/Commission_source__c.field-meta.xml
<CustomField>
    <fullName>Commission_source__c</fullName>
    <inlineHelpText>Le calcul de la commission se fait lors de la création du contrat et se base sur la convention de la source si elle existe.</inlineHelpText>
    <label>Commission de la source €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>