force-app/main/default/objects/Contract/fields/Consommation_totale__c.field-meta.xml
<CustomField>
    <fullName>Consommation_totale__c</fullName>
    <formula>(CAR__c/12) *   ContractTerm</formula>
    <label>Consommation totale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>