force-app/main/default/objects/Contract/fields/contrat_valide__c.field-meta.xml
<CustomField>
    <fullName>contrat_valide__c</fullName>
    <formula>ISPICKVAL(Status, &apos;En attente de validation&apos;) &lt;&gt; True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrat valide</label>
    <type>Checkbox</type>
</CustomField>