force-app/main/default/objects/Contract/fields/Date_derniere_facture_emise__c.field-meta.xml
<CustomField>
    <fullName>Date_derniere_facture_emise__c</fullName>
    <label>Date dernière facture émise</label>
    <summarizedField>Appel_facturation__c.Mois_facturation_concerne__c</summarizedField>
    <summaryForeignKey>Appel_facturation__c.Contrat__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>