force-app/main/default/objects/Contract/fields/Date_Envoi_Validation_Email__c.field-meta.xml
<CustomField>
    <fullName>Date_Envoi_Validation_Email__c</fullName>
    <label>Date Envoi Validation Email</label>
    <type>Date</type>
</CustomField>