force-app/main/default/objects/Contract/fields/Encours_fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Encours_fournisseur__c</fullName>
    <formula>Commission_ADE__c -  Montant_percu__c -  Montant_decommission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Encours fournisseur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>