force-app/main/default/objects/Contract/fields/Envoi_Validation_Email__c.field-meta.xml
<CustomField>
    <fullName>Envoi_Validation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envoi Validation Email</label>
    <type>Checkbox</type>
</CustomField>