force-app/main/default/objects/Contract/fields/Etat_sommes_appels_facturations__c.field-meta.xml
<CustomField>
    <fullName>Etat_sommes_appels_facturations__c</fullName>
    <formula>IF(Commission_ADE__c &lt;&gt; Somme_appels_facturation__c,
IMAGE(&quot;/img/msg_icons/warning32.png&quot;, &quot;Écart détecté&quot;),
IMAGE(&quot;/img/msg_icons/confirm32.png&quot;, &quot;Pas d&apos;écart&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appel à facturation</label>
    <type>Text</type>
</CustomField>