force-app/main/default/objects/Contract/fields/Etat_sommes_commissions__c.field-meta.xml
<CustomField>
    <fullName>Etat_sommes_commissions__c</fullName>
    <formula>IF(Commission_commercial__c &lt;&gt; Somme_commissions_commercial__c,
IMAGE(&quot;/img/msg_icons/warning32.png&quot;, &quot;Écart détecté&quot;),
IMAGE(&quot;/img/msg_icons/confirm32.png&quot;, &quot;Pas d&apos;écart&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Vérifie l&apos;écart entre la commission du commercial sur le contrat et la somme des commissions</inlineHelpText>
    <label>Commissions</label>
    <type>Text</type>
</CustomField>