force-app/main/default/objects/Contract/fields/Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Fournisseur__c</fullName>
    <label>FournisseurTODELETE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>