force-app/main/default/objects/Contract/fields/FournisseurPicklist__c.field-meta.xml
<CustomField>
    <fullName>FournisseurPicklist__c</fullName>
    <label>Fournisseur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fournisseur</valueSetName>
    </valueSet>
</CustomField>