force-app/main/default/objects/Contract/fields/Mail_manager_commercial__c.field-meta.xml
<CustomField>
    <fullName>Mail_manager_commercial__c</fullName>
    <label>Mail manager commercial</label>
    <type>Email</type>
</CustomField>