force-app/main/default/objects/Contract/fields/Mail_signataire__c.field-meta.xml
<CustomField>
    <fullName>Mail_signataire__c</fullName>
    <label>Mail du signataire</label>
    <type>Email</type>
</CustomField>