force-app/main/default/objects/Contract/fields/Marge_Mwh_C1__c.field-meta.xml
<CustomField>
    <fullName>Marge_Mwh_C1__c</fullName>
    <label>Marge globale €/Mwh C1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>