force-app/main/default/objects/Contract/fields/Montant_decommission__c.field-meta.xml
<CustomField>
    <fullName>Montant_decommission__c</fullName>
    <label>Montant décommission</label>
    <summarizedField>Appel_facturation__c.Montant__c</summarizedField>
    <summaryFilterItems>
        <field>Appel_facturation__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Décommission</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Appel_facturation__c.Statut__c</field>
        <operation>equals</operation>
        <value>Appel à facturation émis</value>
    </summaryFilterItems>
    <summaryForeignKey>Appel_facturation__c.Contrat__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>