force-app/main/default/objects/Contract/fields/Nom_signataire__c.field-meta.xml
<CustomField>
    <fullName>Nom_signataire__c</fullName>
    <label>Nom du signataire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>