force-app/main/default/objects/Contract/fields/Nombre_PDE__c.field-meta.xml
<CustomField>
    <fullName>Nombre_PDE__c</fullName>
    <label>Nombre de PDE</label>
    <summaryForeignKey>Prix_contrat_PDE__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>