force-app/main/default/objects/Contract/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contrats</relationshipLabel>
    <relationshipName>Contrats</relationshipName>
    <type>Lookup</type>
</CustomField>