force-app/main/default/objects/Contract/fields/PM_ADE_Mwh_C4__c.field-meta.xml
<CustomField>
    <fullName>PM_ADE_Mwh_C4__c</fullName>
    <label>PM ADE globale €/Mwh C4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>