force-app/main/default/objects/Contract/fields/Prenom_signataire__c.field-meta.xml
<CustomField>
    <fullName>Prenom_signataire__c</fullName>
    <label>Prénom du signataire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>