force-app/main/default/objects/Contract/fields/Programmation_appel__c.field-meta.xml
<CustomField>
    <fullName>Programmation_appel__c</fullName>
    <label>Programmation appel</label>
    <type>Date</type>
</CustomField>