force-app/main/default/objects/Contract/fields/Remuneration_source__c.field-meta.xml
<CustomField>
    <fullName>Remuneration_source__c</fullName>
    <description>Le calcul de la commission se fait lors de la validation du contrat et se base sur la convention de la source si elle existe.</description>
    <inlineHelpText>Le calcul de la commission se fait lors de la validation du contrat et se base sur la convention de la source si elle existe.</inlineHelpText>
    <label>Rémunération perçu par la source</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>