force-app/main/default/objects/Contract/fields/Renouvellement_Effectue__c.field-meta.xml
<CustomField>
    <fullName>Renouvellement_Effectue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renouvellement effectué</label>
    <type>Checkbox</type>
</CustomField>