force-app/main/default/objects/Contract/fields/Siret_payeur__c.field-meta.xml
<CustomField>
    <fullName>Siret_payeur__c</fullName>
    <inlineHelpText>Si plusieurs SIRET payeur renseigner &apos;MULTI-PAYEUR&apos;</inlineHelpText>
    <label>Siret payeur</label>
    <length>16</length>
    <type>Text</type>
</CustomField>