force-app/main/default/objects/Contract/fields/Societe_du_commercial__c.field-meta.xml
<CustomField>
    <fullName>Societe_du_commercial__c</fullName>
    <formula>Commercial__r.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Société du commercial</label>
    <type>Text</type>
</CustomField>