force-app/main/default/objects/Contract/fields/Somme_appels_facturation__c.field-meta.xml
<CustomField>
    <fullName>Somme_appels_facturation__c</fullName>
    <label>Somme des appels à facturation</label>
    <summarizedField>Appel_facturation__c.Montant__c</summarizedField>
    <summaryForeignKey>Appel_facturation__c.Contrat__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>