force-app/main/default/objects/Contract/fields/Somme_commissions_commercial__c.field-meta.xml
<CustomField>
    <fullName>Somme_commissions_commercial__c</fullName>
    <label>Somme des commissions du commercial</label>
    <summarizedField>Commission__c.Montant__c</summarizedField>
    <summaryForeignKey>Commission__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>