force-app/main/default/objects/Contract/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Origine du contrat</description>
    <label>Source</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Une source ne peut pas être un compte de type &quot;partner&quot;</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Account Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>