force-app/main/default/objects/Contract/fields/Statut_payement__c.field-meta.xml
<CustomField>
    <fullName>Statut_payement__c</fullName>
    <formula>IF(Encours_fournisseur__c &lt;= 0,&apos;Complet&apos;,&apos;Incomplet&apos;)</formula>
    <label>Statut payement</label>
    <type>Text</type>
</CustomField>