force-app/main/default/objects/Contract/fields/TECH_AA_OwnerName__c.field-meta.xml
<CustomField>
    <fullName>TECH_AA_OwnerName__c</fullName>
    <label>Directeur Partenariat</label>
    <length>30</length>
    <type>Text</type>
</CustomField>