force-app/main/default/objects/Contract/fields/TECH_AdhesionSymposiumURL__c.field-meta.xml
<CustomField>
    <fullName>TECH_AdhesionSymposiumURL__c</fullName>
    <formula>&apos;https://alliancedesenergies.my.site.com/adhesion/s/symposium?c=&apos; + Id</formula>
    <label>Adhesion Symposium URL</label>
    <type>Text</type>
</CustomField>