force-app/main/default/objects/Contract/fields/TECH_Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>TECH_Fournisseur__c</fullName>
    <formula>IF(ISBLANK(TEXT(Entite_facturation__c)),TEXT(FournisseurPicklist__c),TEXT(Entite_facturation__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Fournisseur</label>
    <type>Text</type>
</CustomField>