force-app/main/default/objects/Contract/fields/TECH_Number_AF__c.field-meta.xml
<CustomField>
    <fullName>TECH_Number_AF__c</fullName>
    <label>Nombre d&apos;appels à facturations</label>
    <summaryForeignKey>Appel_facturation__c.Contrat__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>