force-app/main/default/objects/Contract/fields/TECH_Number_AF_Valides__c.field-meta.xml
<CustomField>
    <fullName>TECH_Number_AF_Valides__c</fullName>
    <label>Nombre d&apos;appels à facturations validés</label>
    <summaryFilterItems>
        <field>Appel_facturation__c.Statut__c</field>
        <operation>equals</operation>
        <value>OK pour facturation, Appel à facturation émis</value>
    </summaryFilterItems>
    <summaryForeignKey>Appel_facturation__c.Contrat__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>