force-app/main/default/objects/Contract/fields/TECH_Partner_OwnerName__c.field-meta.xml
<CustomField>
    <fullName>TECH_Partner_OwnerName__c</fullName>
    <label>Directeur partenaire</label>
    <length>50</length>
    <type>Text</type>
</CustomField>