force-app/main/default/objects/Contract/fields/TECH_Type_partenaire__c.field-meta.xml
<CustomField>
    <fullName>TECH_Type_partenaire__c</fullName>
    <formula>TEXT(Commercial__r.Contact.Account.Type_partenaire__c)</formula>
    <label>TECH Type de partenaire</label>
    <type>Text</type>
</CustomField>