force-app/main/default/objects/Contract/fields/Tel_signataire__c.field-meta.xml
<CustomField>
    <fullName>Tel_signataire__c</fullName>
    <label>Téléphone du signataire</label>
    <length>20</length>
    <type>Text</type>
</CustomField>