force-app/main/default/objects/Contract/fields/Type_energie__c.field-meta.xml
<CustomField>
    <fullName>Type_energie__c</fullName>
    <formula>IF(Opportunity__r.TECH_FTA__c = &apos;GAZ&apos;,&apos;Gaz&apos;,&apos;Elec&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&apos;énergie</label>
    <type>Text</type>
</CustomField>