force-app/main/default/objects/Contract/fields/Type_offre__c.field-meta.xml
<CustomField>
    <fullName>Type_offre__c</fullName>
    <label>Type d&apos;offre</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRIX FIXE</fullName>
            </value>
            <value>
                <fullName>ARENH AVEC ÉCRÊTEMENT</fullName>
            </value>
            <value>
                <fullName>ARENH SANS ÉCRÊTEMENT</fullName>
            </value>
            <value>
                <fullName>PEG</fullName>
            </value>
            <value>
                <fullName>TRV</fullName>
            </value>
            <value>
                <fullName>Offre clique</fullName>
            </value>
            <value>
                <fullName>Prestation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>