force-app/main/default/objects/Contract/recordTypes/Energie.recordType-meta.xml
<RecordType>
    <fullName>Energie</fullName>
    <active>true</active>
    <label>Contrat de fourniture d&apos;énergie</label>
</RecordType>