force-app/main/default/objects/Contract/recordTypes/Prestation.recordType-meta.xml
<RecordType>
    <fullName>Prestation</fullName>
    <active>true</active>
    <label>Contrat de prestation</label>
</RecordType>