force-app/main/default/objects/Contract/validationRules/VR_001.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_001</fullName>
    <active>false</active>
    <description>Si tous les appels à facturation sont validés le contrat n&apos;est plus modifiable SAUF le propriétaire du contrat</description>
    <errorConditionFormula>AND(
    TECH_Number_AF_Valides__c = TECH_Number_AF__c,
				TECH_Number_AF_Valides__c &gt; 0 ,
    TECH_Number_AF__c &gt; 0,
    NOT(
        OR(
            ISCHANGED(OwnerId),
            ISCHANGED(TECH_Number_AF_Valides__c),
            ISCHANGED(TECH_Number_AF__c),
												ISCHANGED(Status),  
            ISCHANGED(Date_Envoi_Validation_Email__c),
            ISCHANGED(Envoi_Validation_Email__c),											 
            ISCHANGED(Appel_qualite_demande__c),
            ISCHANGED(Programmation_appel__c),
												ISCHANGED(Renouvellement_Effectue__c)
        )
    )
)</errorConditionFormula>
    <errorMessage>Ce contrat est verrouillé</errorMessage>
</ValidationRule>