force-app/main/default/objects/Contract/validationRules/VR_002.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_002</fullName>
    <active>true</active>
    <description>Date de signature du client supérieur à aujourd&apos;hui</description>
    <errorConditionFormula>CustomerSignedDate &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>CustomerSignedDate</errorDisplayField>
    <errorMessage>Attention, votre date de signature du contrat est dans le future</errorMessage>
</ValidationRule>